# touchctl

./: .gitignore  Cargo.toml  LICENSE  README.md
packaging/systemd-user/: touchctl.service
profiles/: default.toml
src/: actions.rs  cli.rs  config.rs  gestures.rs  input.rs  ipc.rs  logging.rs  main.rs  tracker.rs
src/ipc/: dispatch.rs  mod.rs  pipeline.rs  runtime.rs  server.rs
