[package]
name = "touchctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

evdev = "0.13.2"
uinput = "0.1.3"

notify = "8.2.0"
pico-args = "0.5.0"
signal-hook = { version = "0.3.18", features = ["iterator"] }